crates/solidity/testing/snapshots/bindings_output/constants/top_level/generated/0.6.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or EnumKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword or StructKeyword.
    ╭─[input.sol:11:1]
    │
 11 │ ╭─▶ address constant MY_ADDRESS = 0x777788889999AaAAbBbbCcccddDdeeeEfFFfCcCc;
    ┆ ┆   
 13 │ ├─▶ Direction constant MY_DIRECTION = Direction.EAST;
    │ │                                                       
    │ ╰─────────────────────────────────────────────────────── Error occurred here.
────╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Constants {
   │          ────┬────  
   │              ╰────── def: 1
 2 │     function test() public {
   │              ──┬─  
   │                ╰─── def: 2
 3 │         assert(MY_DIRECTION != Direction.NORTH);
   │         ───┬── ──────┬─────    ────┬──── ──┬──  
   │            ╰──────────────────────────────────── ref: built-in
   │                      │             │       │    
   │                      ╰────────────────────────── unresolved
   │                                    │       │    
   │                                    ╰──────────── ref: 3
   │                                            │    
   │                                            ╰──── ref: 4
 4 │         assert(MY_UINT > 100);
   │         ───┬── ───┬───  
   │            ╰──────────── ref: built-in
   │                   │     
   │                   ╰───── unresolved
 5 │         require(msg.sender == MY_ADDRESS);
   │         ───┬─── ─┬─ ───┬──    ─────┬────  
   │            ╰────────────────────────────── refs: built-in, built-in
   │                  │     │           │      
   │                  ╰──────────────────────── ref: built-in
   │                        │           │      
   │                        ╰────────────────── ref: built-in
   │                                    │      
   │                                    ╰────── unresolved
   │ 
 9 │ enum Direction { NORTH, SOUTH, EAST, WEST }
   │      ────┬────   ──┬──  ──┬──  ──┬─  ──┬─  
   │          ╰───────────────────────────────── def: 3
   │                    │      │      │     │   
   │                    ╰─────────────────────── def: 4
   │                           │      │     │   
   │                           ╰──────────────── def: 5
   │                                  │     │   
   │                                  ╰───────── def: 6
   │                                        │   
   │                                        ╰─── def: 7
───╯
